<resources>
    <string name="app_name" translatable="false">CoolSports</string>

    <string name="privacy_policy_link" translatable="false">https://coolsports6.wordpress.com/privacy-policy/</string>
    <string name="account_email" translatable="false">mahi3567baeimi3467@gmail.com</string>
    <string name="app_pref_name" translatable="false">cool-sports</string>


    <string-array name="tab_names">
        <item>团队排名</item>
        <item>球员排名</item>
    </string-array>

    <string name="no_connection_exception">N无连接异常</string>
    <string name="no_internet_exception">无网络异常</string>


    <string name="PREMIERE_LEAGUE">英格兰超级联赛</string>
    <string name="LA_LIGA">西班牙甲组联赛</string>
    <string name="SERIE_A">意大利甲组联赛</string>
    <string name="BUNDESLIGA">德国甲组联赛</string>
    <string name="LIGUE_1">法国甲组联赛</string>
    <string name="CHINESE_SUPER_LEAGUE">中国超级联赛</string>
    <string name="AFC_CHAMPIONS_LEAGUE">亚洲联赛冠军杯</string>
    <string name="ASIAN_QUALIFIERS">世界杯亚洲区预选赛</string>
    <string name="SOUTH_AMERICAN_QUALIFIER">世界杯南美洲区预选赛</string>
    <string name="EUROPEAN_QUALIFIER">世界杯欧洲区预选赛</string>
    <string name="WORLD_CUP">世界杯</string>
    <string name="EUROPEAN_CUP">欧洲国家杯</string>
    <string name="CONFEDERATIONS_CUP">国际足联联合会杯</string>
    <string name="AMERICAS_CUP">美洲国家杯</string>

    <string name="Spain">西班牙</string>
    <string name="England">英格兰</string>
    <string name="Italy">意大利</string>
    <string name="Germany">德国</string>
    <string name="China">中国</string>
    <string name="Asia">亚洲赛事</string>
    <string name="International">国际赛事</string>
    <string name="Europe">欧洲赛事</string>
    <string name="Americas">美洲赛事</string>
    <string name="France">法国</string>




    <string name="ok">好</string>
    <string name="action_settings">设置</string>
    <string name="search_here">在此搜索</string>
    <string name="title_home">首页</string>
    <string name="exit_app">退出应用程序</string>
    <string name="are_you_sure_you_want_to_exit_the_app">你确定你要退出吗？</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="english">英文</string>
    <string name="chinese">汉语</string>
    <string name="indonesian">印尼语</string>
    <string name="vietnamese">越南语</string>
    <string name="thai">泰语</string>
    <string name="language">语言</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="share_app">分享应用</string>
    <string name="feedback">反馈</string>
    <string name="rate_us">给我们评分</string>
    <string name="languages">语言</string>
    <string name="exit_app_text">确定要退出应用吗？</string>


    <string name="leagues">联赛</string>
    <string name="team_info">团队信息</string>
    <string name="full_name">全名:</string>
    <string name="founding_name">创立日期:</string>
    <string name="coach">教练:</string>
    <string name="area">地区:</string>
    <string name="capacity">能力:</string>
    <string name="website">网站:</string>
    <string name="top_scorers">最高得分</string>
    <string name="mvp">最有价值球员</string>
    <string name="league_info">联赛信息</string>
    <string name="short_name">短名:</string>
    <string name="type">类别:</string>
    <string name="country">国际:</string>
    <string name="current_season">当前节:</string>
    <string name="team_standing">团队排名</string>
    <string name="player_standing">球员排名</string>
    <string name="player_info">球员信息</string>
    <string name="birthday">生日:</string>
    <string name="height">身高:</string>
    <string name="weight">首页:</string>
    <string name="position">岗位:</string>
    <string name="number">号码:</string>
    <string name="contrat_ending">合同到期:</string>
    <string name="player">球员</string>
    <string name="team">球队</string>
    <string name="goals">球门</string>
    <string name="home">首页</string>
    <string name="away">离开</string>
    <string name="rules">规则</string>
    <string name="there_is_no_information_for_this_player">没有这个球员的信息</string>
    <string name="there_is_no_information_for_this_team">没有这个球队的信息</string>


</resources>