<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient_bkg"
    tools:context=".presentation.settings.LanguegesFragment">


    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/title"
        android:text="@string/languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Conifer"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <RadioGroup
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:id="@+id/languagesRG"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/englishRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/radio_button_selector"
            android:drawablePadding="20dp"
            android:text="@string/english"
            android:textColor="@color/black"
            tools:checked="true" />

        <View
            android:background="@color/cerulean_blue"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RadioButton
            android:id="@+id/chineseRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/radio_button_selector"
            android:drawablePadding="20dp"
            android:text="@string/chinese"
            android:textColor="@color/black" />
        <View
            android:background="@color/cerulean_blue"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RadioButton
            android:id="@+id/indonesianRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/radio_button_selector"
            android:drawablePadding="20dp"
            android:text="@string/indonesian"
            android:textColor="@color/black" />
        <View
            android:background="@color/cerulean_blue"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RadioButton
            android:id="@+id/vietnameseRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/radio_button_selector"
            android:drawablePadding="20dp"
            android:text="@string/vietnamese"
            android:textColor="@color/black" />
        <View
            android:background="@color/cerulean_blue"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RadioButton
            android:id="@+id/thaiRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/radio_button_selector"
            android:drawablePadding="20dp"
            android:text="@string/thai"
            android:textColor="@color/black" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>