<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient_bkg"
    android:padding="10dp"
    >
    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/screen_title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Conifer"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/ic_settings"
        android:layout_height="wrap_content"
        />
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        app:queryHint="@string/search_here"
        app:iconifiedByDefault="false"
        android:layout_marginTop="20dp"
        app:theme="@style/SearchViewStyle"
        app:searchIcon="@drawable/ic_search"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        android:background="@drawable/resolution_blue_rounded_bkg"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/league_image_view"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/league_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/league_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <TextView
        android:id="@+id/full_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/full_name"
        android:textColor="@color/hawkes_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/league_info_title" />

    <TextView
        android:id="@+id/full_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/league_info_title" />

    <TextView
        android:id="@+id/short_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/short_name"
        android:textColor="@color/hawkes_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_title" />

    <TextView
        android:id="@+id/short_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="BUND"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_title" />

    <TextView
        android:id="@+id/type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/type"
        android:textColor="@color/hawkes_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/short_name_title" />

    <TextView
        android:id="@+id/type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="2"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/short_name_title" />

    <TextView
        android:id="@+id/country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/country"
        android:textColor="@color/hawkes_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_title" />

    <TextView
        android:id="@+id/country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="Country:"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_title" />

    <TextView
        android:id="@+id/current_season_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/current_season"
        android:textColor="@color/hawkes_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_title" />

    <TextView
        android:id="@+id/current_season_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="2022"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/current_season_title"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorColor="@color/Conifer"
        app:tabMinWidth="50dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/hawkes_blue">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/team_standing" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/player_standing" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>