<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#A9000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/blue_gradient_roundes_bkg"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_cont"
                    android:layout_marginTop="16dp"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerHorizontal="true"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints"
                        >

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:src="@drawable/ic_baseline_logout_24"
                            android:tint="@color/Conifer"
                            android:layout_marginTop="16dp"
                            tools:ignore="UseAppTint" />

                        <TextView
                            android:id="@+id/exit_heading"
                            android:layout_width="match_parent"
                            android:layout_marginTop="14dp"
                            android:layout_height="wrap_content"
                            android:text="@string/exit_app"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            />

                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/exit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginStart="78dp"
                        android:layout_marginEnd="78dp"
                        android:text="@string/are_you_sure_you_want_to_exit_the_app"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="28dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerHorizontal="true"
                        >

                        <TextView
                            android:id="@+id/yes_bt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/exit"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:background="@drawable/blue_white_boarder_bkg"
                            android:paddingStart="26dp"
                            android:paddingEnd="26dp"
                            />

                        <TextView
                            android:id="@+id/no_bt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/cancel"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="26dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:paddingStart="26dp"
                            android:paddingEnd="26dp"
                            android:background="@drawable/white_rounded_bkg"
                            android:backgroundTint="@color/white"
                            />


                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>